Update resources.md